fix(documentation): fix documentation display overflow because of img

--- a/src/app/web-page/components/documentation/documentation.component.scss
+++ b/src/app/web-page/components/documentation/documentation.component.scss
@@ -1,52 +1,54 @@
 @import '../../../partials/colors';
 
 markdown {
-    ::ng-deep {
-        code {
-            background-color: rgba(27, 31, 35, 0.05);
-            border-radius: 3px;
-            font-size: 85%;
-            margin: 0;
-            padding: 0.2em 0.4em;
-        }
+    code {
+        background-color: rgba(27, 31, 35, 0.05);
+        border-radius: 3px;
+        font-size: 85%;
+        margin: 0;
+        padding: 0.2em 0.4em;
+    }
 
-        h2 {
-            font-size: 36px;
-            line-height: 44px;
-            margin-top: 20px;
-            padding-top: 35px;
-            color: $primaryColor;
-        }
+    h2 {
+        font-size: 36px;
+        line-height: 44px;
+        margin-top: 20px;
+        padding-top: 35px;
+        color: $primaryColor;
+    }
 
-        h3 {
-            font-size: 22px;
-            margin-top: 40px;
-        }
+    h3 {
+        font-size: 22px;
+        margin-top: 40px;
+    }
 
-        h4 {
-            font-size: 18px;
-            margin-top: 30px;
-        }
+    h4 {
+        font-size: 18px;
+        margin-top: 30px;
+    }
 
-        h3,
-        h4 {
-            opacity: 0.8;
-            margin-bottom: 10px;
-        }
+    h3,
+    h4 {
+        opacity: 0.8;
+        margin-bottom: 10px;
+    }
 
-        h3,
-        h4,
-        strong {
-            color: $headingColor;
-        }
+    h3,
+    h4,
+    strong {
+        color: $headingColor;
+    }
 
-        h2,
-        h3,
-        h4 {
-            & > a {
-                text-decoration: none;
-                color: inherit;
-            }
+    h2,
+    h3,
+    h4 {
+        & > a {
+            text-decoration: none;
+            color: inherit;
         }
+    }
+
+    img {
+        max-width: 100%;
     }
 }
